xdg-utils-cxx (1.0.1-3) UNRELEASED; urgency=medium

  * Add shlibs. 

 -- Scarlett Moore <sgmoore@kde.org>  Thu, 04 Feb 2021 14:13:02 -0700

xdg-utils-cxx (1.0.1-2) unstable; urgency=medium

  * Update copyright with missing entry.
    Refresh formatting.
  * Update standards version to 4.5.1; no changes needed.
  * Add upstream patch to fix typo. (lintain)
  * Release to unstable.

 -- Scarlett Moore <sgmoore@kde.org>  Tue, 19 Jan 2021 10:08:38 -0700

xdg-utils-cxx (1.0.1-1) unstable; urgency=medium

  [ Scarlett Moore ]
  * Initial release (Closes: #934253)

 -- Scarlett Moore <sgmoore@kde.org>  Wed, 13 Jan 2021 14:35:26 -0700