@@ -1,1 +1,3 @@
+fix_so_version.patch
+fix_install_path.patch
 upstream_fix_typo.patch
