@@ -1,6 +1,8 @@
 xdg-utils-cxx (1.0.1-3) UNRELEASED; urgency=medium
 
   * Add shlibs. 
+  * Add patches to be upstreamed to fix 
+    SO versioning and install paths.
 
  -- Scarlett Moore <sgmoore@kde.org>  Thu, 04 Feb 2021 14:13:02 -0700
 
